# ROAMS

./: .gitignore  README.md  license.txt  logging.conf  pyproject.toml
data/dummy/: natl_ng_ch4_ghgi.csv  natl_ng_ch4_uncertainty_ghgi.csv  natl_pet_ch4_ghgi.csv  natnl_production_est.csv  plumes.csv  simulated_prod.csv  sources.csv  state_ghgi.csv  state_production_est.csv
docs/: changelog.md  implementation.md  methodology.md  use cases.md
roams/: analysis.py  conf.py  constants.py  conversions.py  input.py  model.py  output.py  transition_point.py  utils.py
roams/aerial/: assumptions.py  input.py  partial_detection.py  preprocess.py  sample.py
roams/midstream_ghgi/: input.py
roams/production/: input.py
roams/simulated/: input.py  sample.py  stratify.py
roams/tests/: __init__.py  test_aerialinput.py  test_conversions.py  test_coveredprodinput.py  test_ghgiinput.py  test_roamsinput.py  test_roamsmodel.py  test_siminput.py  test_stratification.py  test_transitionpoint.py
roams/tests/validation/: _simulated_stratified.csv  _validation_ghgi_gasprod.csv  _validation_ghgi_gasunc.csv  _validation_ghgi_oilprod.csv  _validation_natnlprod.csv  _validation_plumes.csv  _validation_sources.csv  _validation_stateghgi.csv  _validation_stateprod.csv  deterministic_validation.py
scripts/: run_dummy_data.py  run_nm_permian.py  run_roams_model.py
